# GcToolKit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
app/: CMakeLists.txt  aes.c  aes.h  aes_cmac.c  bgm.cpp  bgm.h  crypto.c  crypto.h  ctrl.c  ctrl.h  device.c  device.h  draw.c  draw.h  err.h  f00dbridge.h  gameinfo.c  gameinfo.h  gc_ident.c  gc_ident.h  ime.c  ime.h  io.c  io.h  kernel.c  kernel.h  log.h  main.c  mbr.h  menu.c  menu.h  net.c  net.h  psv.h  sfo.c  sfo.h  vci.h
app/res/sce_sys/livearea/contents/: template.xml
kern/: CMakeLists.txt  GcKernKit.h  GcKernKit.yml  cmd56.c  cmd56.h  cobra.c  cobra.h  f00d.c  f00d.h  f00dbridge.h  format.c  format.h  gc.c  gc.h  io.c  io.h  kplugin.yml  log.h  main.c  mod.c  mod.h  otg.c  otg.h
kern/payload/: main.c  payload.h
pc/: CMakeLists.txt  gc_backup_network.sln  main.c  main.h
pc/gc_backup_network/: FileRecvClient.cs  Program.cs
pc/gc_backup_network/Properties/PublishProfiles/: FolderProfile.pubxml
